# oicf

./: Makefile.am  OICFTemplate-uninstalled.pc.in  OICFTemplate.pc.in  README  TODO.tasks  bootstrap  configure.ac  generate_pc.sh
doc/: Doxyfile
src/: Makefile.am
src/OICFControl/: AxisEvent.h  ButtonEvent.h  KeyEvent.cpp  KeyEvent.h  Makefile.am  OICFControlListener.h  OICFControlListener.xml  OICFControlListenerProvider.h  RotaryEvent.h
src/OICFMail/: MailEntry.cpp  MailEntry.h  MailEntryVector.cpp  MailEntryVector.h  Makefile.am  OICFMail.h  OICFMail.xml  OICFMailListener.h  OICFMailListener.xml  OICFMailListenerProvider.h  OICFMailProvider.h
src/OICFMedia/: DeviceEnum.cpp  DeviceEnum.h  Line.cpp  Line.h  LineVector.cpp  LineVector.h  Makefile.am  OICFMedia.h  OICFMedia.xml  OICFMediaListener.h  OICFMediaListener.xml  OICFMediaListenerProvider.h  OICFMediaProvider.h
src/OICFNavigation/: CoordWGS84.cpp  CoordWGS84.h  Makefile.am  OICFNavigation.h  OICFNavigation.xml  OICFNavigationListener.h  OICFNavigationListener.xml  OICFNavigationListenerProvider.h  OICFNavigationProvider.h
src/OICFPhone/: Makefile.am  OICFPhone.h  OICFPhone.xml  OICFPhoneListener.h  OICFPhoneListener.xml  OICFPhoneListenerProvider.h  OICFPhoneProvider.h  PhoneEntry.cpp  PhoneEntry.h  PhoneEntryVector.cpp  PhoneEntryVector.h
